Added a lot of new strings to the config file.

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -1,33 +1,54 @@
 ENTERNAME1 = Hello there! Please enter first player name:
-ENTERNAME2 = Now please enter the second players name:
-NAMEERROR = Sir! Your name cannot be the same as your opponent, please choose a different one!
-ENDGAMEBUTTON1 = has won the game. Jolly good show lads!
+ENTERNAME2 = Now please enter next players name:
+NAMEERROR = You cannot be named the same as another player, no spaces and max 15 characters!
+ENDGAMEBUTTON1 = %s has won the game with %d with cash left. Jolly good show lads!
 ENDGAMEBUTTON2 = Retry
 ENDGAMEBUTTON3 = End the game
-NEXTTURN = The turn goes over to: 
+NEXTTURN = The turn goes over to: %s
 EXTRATURN = has gained and extra turn.
-EMPTYNAMEERROR = Sir! You need an epic title, which does not contain spaces, to participate in this endeavour!
 ROLL = Roll
 OK = Oh dear, how delightful.
-SLOT1 = Tower
+NUMBEROFPLAYERS = Enter the number of players:
+LOSINGPLAYER = %s has lost all their money and have been lost during their travels
+SLOT1 = Tribe Encampment
 SLOT2 = Crater
-SLOT3 = Palace
+SLOT3 = Mountain
 SLOT4 = Cold desert
-SLOT5 = Walled city
-SLOT6 = Monastery
-SLOT7 = Black cave
-SLOT8 = Huts in the mountain
-SLOT9 = The Werewall
-SLOT10 = The Pit
-SLOT11 = Goldmine
-SLOTDSC1 = You meet a stunning princess and she gives you 250 gold!
-SLOTDSC2 = You fall in a crater! And must pay 100 gold in medical bills.
-SLOTDSC3 = You arrive at a palace and the visit earns you 100 gold.
-SLOTDSC4 = You get lost in the desert and have to spend the night freezing and losing 20 gold.
-SLOTDSC5 = You arrive at the famous Walled city! And a day spent in the merchant square earns you 180 gold.
-SLOTDSC6 = You spend the day at a monastery relaxing, but it earns you no gold.
-SLOTDSC7 = You get attacked by robbers in a black cave, and the bandits steal 70 gold!
-SLOTDSC8 = You stumbled upon a cluster of huts near the foot of a mountain, they tell you trade secrets! You earn 60 gold.
-SLOTDSC9 = You arrive at the infamous Werewall and have to flee at a moments notice, you drop 80 gold worth of stuff! After your flight you come across a rare werewolf trinket, and it earns you an extra turn.
-SLOTDSC10 = You get a night in the pit! For violent behaviour after a couple too many drinks. It costs you 50 gold to get out.
-SLOTDSC11 = It must be your lucky day! You arrive at the famous gold mine! The visit earns you 650 gold.
+SLOT5 = Black cave
+SLOT6 = The Werewall
+SLOT7 = Mountain village
+SLOT8 = South Citadel
+SLOT9 = Palace gates
+SLOT10 = Tower
+SLOT11 = Castle
+SLOT12 = Walled city
+SLOT13 = Monastery
+SLOT14 = Huts in the mountain
+SLOT15 = The pit
+SLOT16 = Goldmine
+SLOT17 = Caravan
+SLOT18 = Second Sail
+SLOT19 = Sea Grover
+SLOT20 = The Buccaneers
+SLOT21 = Privateer armade
+SLOTDSC1 = (Territory)- An ancient tribe of warriors
+SLOTDSC2 = (Territory)- The Crater and its city within are notorious for their bars
+SLOTDSC3 = (Territory)- An awesome mountain range appears before your eyes
+SLOTDSC4 = (Territory)- This desert is notorious for its extreme weather
+SLOTDSC5 = (Territory)- It is said that a monster dwells within this silent hole
+SLOTDSC6 = (Territory)- This bulwark is the only defense against the madden hordes beyond
+SLOTDSC7 = (Territory)- The people of this sacred village are good at their trade
+SLOTDSC8 = (Territory)- The southern citadel is as big as it is impressive
+SLOTDSC9 = (Territory)- These gates has never let anyone out and welcomes travelers
+SLOTDSC10 = (Territory)- This towering construct watches the coast silently
+SLOTDSC11 = (Territory)- A Brilliant white castle which is a symbol of the 3rd kingdom
+SLOTDSC12 = (Refuge)- The Walled city contains many good people whom helps others
+SLOTDSC13 = (Refuge)- This monastery offers aid to anyone who enters
+SLOTDSC14 = (Labor camp)- A slave encampment that digs after forbidden relics for money
+SLOTDSC15 = (Labor camp)- The workers here slaves day and night to contain the dragon
+SLOTDSC16 = (Tax)- Mining gold can be a risky business which often ends up costing you
+SLOTDSC17 = (Tax)- Travelling through the desert isn't free pay up!
+SLOTDSC18 = (Fleet)- The mighty Second Sail is an awesome and fast frigate
+SLOTDSC19 = (Fleet)- The Sea Grover is the biggest trading ship in existence
+SLOTDSC20 = (Fleet)- The Buccaneers are a couple of small warships
+SLOTDSC21 = (Fleet)- The Privateer armade makes up a decent fleet of small frigates
