Tilføjelse af metode til account, små ændringer i territory og message

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -52,3 +52,8 @@ SLOTDSC18 = (Fleet)- The mighty Second Sail is an awesome and fast frigate
 SLOTDSC19 = (Fleet)- The Sea Grover is the biggest trading ship in existence
 SLOTDSC20 = (Fleet)- The Buccaneers are a couple of small warships
 SLOTDSC21 = (Fleet)- The Privateer armade makes up a decent fleet of small frigates
+BUYFIELD = This field is empty, do you want to buy it for %d?
+YES = Yes
+NO = No
+NOTENOUGHGOLD = You don't have enough gold to buy this field
+ENDTURN = You are ending your turn
