Færdiggjort LandOnField i territory klassen samt små tilføjelser i msg

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -57,3 +57,4 @@ YES = Yes
 NO = No
 NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
+PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d of gold
