--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -58,3 +58,4 @@ NO = No
 NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
 PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d of gold
+LANDONREFUGE = You landed on a refuge field, you get paid %d gold
