Added a message to the user after buying a field, also added the message to the message bundle

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -59,3 +59,4 @@ NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
 PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d of gold
 LANDONREFUGE = You landed on a refuge field, you get paid %d gold
+BOUGHTFIELD = You have successfully bought %s for %d gold!
