Fixed a lot of string to line them up better in the GUI

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -9,6 +9,7 @@ EXTRATURN = has gained and extra turn.
 ROLL = Roll
 OK = Oh dear, how delightful.
 NUMBEROFPLAYERS = Enter the number of players:
+NUMBEROFPLAYERSERROR = Invalid number of players, please select a number between %d and %d
 LOSINGPLAYER = %s has lost all their money and have been lost during their travels
 SLOT1 = Tribe Encampment
 SLOT2 = Crater
@@ -31,27 +32,27 @@ SLOT18 = Second Sail
 SLOT19 = Sea Grover
 SLOT20 = The Buccaneers
 SLOT21 = Privateer armade
-SLOTDSC1 = (Territory)- An ancient tribe of warriors
-SLOTDSC2 = (Territory)- The Crater and its city within are notorious for their bars
-SLOTDSC3 = (Territory)- An awesome mountain range appears before your eyes
-SLOTDSC4 = (Territory)- This desert is notorious for its extreme weather
-SLOTDSC5 = (Territory)- It is said that a monster dwells within this silent hole
-SLOTDSC6 = (Territory)- This bulwark is the only defense against the madden hordes beyond
-SLOTDSC7 = (Territory)- The people of this sacred village are good at their trade
-SLOTDSC8 = (Territory)- The southern citadel is as big as it is impressive
-SLOTDSC9 = (Territory)- These gates has never let anyone out and welcomes travelers
-SLOTDSC10 = (Territory)- This towering construct watches the coast silently
-SLOTDSC11 = (Territory)- A Brilliant white castle which is a symbol of the 3rd kingdom
-SLOTDSC12 = (Refuge)- The Walled city contains many good people whom helps others
-SLOTDSC13 = (Refuge)- This monastery offers aid to anyone who enters
-SLOTDSC14 = (Labor camp)- A slave encampment that digs after forbidden relics for money
-SLOTDSC15 = (Labor camp)- The workers here slaves day and night to contain the dragon
-SLOTDSC16 = (Tax)- Mining gold can be a risky business which often ends up costing you
-SLOTDSC17 = (Tax)- Travelling through the desert isn't free pay up!
-SLOTDSC18 = (Fleet)- The mighty Second Sail is an awesome and fast frigate
-SLOTDSC19 = (Fleet)- The Sea Grover is the biggest trading ship in existence
-SLOTDSC20 = (Fleet)- The Buccaneers are a couple of small warships
-SLOTDSC21 = (Fleet)- The Privateer armade makes up a decent fleet of small frigates
+SLOTDSC1 = <center>(Territory)<\center><b>An ancient tribe of warriors
+SLOTDSC2 = <center>(Territory)<\center><b>The Crater and its city within are notorious for their bars
+SLOTDSC3 = <center>(Territory)<\center><b>An awesome mountain range appears before your eyes
+SLOTDSC4 = <center>(Territory)<\center><b>This desert is notorious for its extreme weather
+SLOTDSC5 = <center>(Territory)<\center><b>It is said that a monster dwells within this silent hole
+SLOTDSC6 = <center>(Territory)<\center><b>This bulwark is the only defense against the madden hordes beyond
+SLOTDSC7 = <center>(Territory)<\center><b>The people of this sacred village are good at their trade
+SLOTDSC8 = <center>(Territory)<\center><b>The southern citadel is as big as it is impressive
+SLOTDSC9 = <center>(Territory)<\center><b>These gates has never let anyone out and welcomes travelers
+SLOTDSC10 = <center>(Territory)<\center><b>This towering construct watches the coast silently
+SLOTDSC11 = <center>(Territory)<\center><b>A Brilliant white castle which is a symbol of the 3rd kingdom
+SLOTDSC12 = <center>(Refuge)<\center><b>The Walled city contains many good people whom helps others
+SLOTDSC13 = <center>(Refuge)<\center><b>This monastery offers aid to anyone who enters
+SLOTDSC14 = <center>(Labor camp)<\center><b>A slave encampment that digs after forbidden relics for money
+SLOTDSC15 = <center>(Labor camp)<\center><b>The workers here slaves day and night to contain the dragon
+SLOTDSC16 = <center>(Tax)<\center><b>Mining gold can be a risky business which often ends up costing you
+SLOTDSC17 = <center>(Tax)<\center><b> Travelling through the desert isn't free pay up!
+SLOTDSC18 = <center>(Fleet)<\center><b>The mighty Second Sail is an awesome and fast frigate
+SLOTDSC19 = <center>(Fleet)<\center><b>The Sea Grover is the biggest trading ship in existence
+SLOTDSC20 = <center>(Fleet)<\center><b>The Buccaneers are a couple of small warships
+SLOTDSC21 = <center>(Fleet)<\center><b>The Privateer armade makes up a decent fleet of small frigates
 BUYFIELD = This field is empty, do you want to buy it for %d?
 YES = Yes
 NO = No
