Added a winners message in the board class

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -11,6 +11,7 @@ OK = Oh dear, how delightful.
 NUMBEROFPLAYERS = Enter the number of players:
 NUMBEROFPLAYERSERROR = Invalid number of players, please select a number between %d and %d
 LOSINGPLAYER = %s has lost all their money and have been lost during their travels
+WINNINGPLAYERNAME = %s has won the game! With %d gold to spare.
 SLOT1 = Tribe Encampment
 SLOT2 = Crater
 SLOT3 = Mountain
