--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -11,7 +11,6 @@ OK = Oh dear, how delightful.
 NUMBEROFPLAYERS = Enter the number of players:
 NUMBEROFPLAYERSERROR = Invalid number of players, please select a number between %d and %d
 LOSINGPLAYER = %s has lost all their money and have been lost during their travels
-WINNINGPLAYERNAME = %s has won the game! With %d gold to spare.
 SLOT1 = Tribe Encampment
 SLOT2 = Crater
 SLOT3 = Mountain
@@ -49,7 +48,7 @@ SLOTDSC13 = <center>(Refuge)<\center><b>This monastery offers aid to anyone who 
 SLOTDSC14 = <center>(Labor camp)<\center><b>A slave encampment that digs after forbidden relics for money
 SLOTDSC15 = <center>(Labor camp)<\center><b>The workers here slaves day and night to contain the dragon
 SLOTDSC16 = <center>(Tax)<\center><b>Mining gold can be a risky business which often ends up costing you
-SLOTDSC17 = <center>(Tax)<\center><b> Travelling through the desert isn't free pay up!
+SLOTDSC17 = <center>(Tax)<\center><b>Travelling through the desert isn't free pay up!
 SLOTDSC18 = <center>(Fleet)<\center><b>The mighty Second Sail is an awesome and fast frigate
 SLOTDSC19 = <center>(Fleet)<\center><b>The Sea Grover is the biggest trading ship in existence
 SLOTDSC20 = <center>(Fleet)<\center><b>The Buccaneers are a couple of small warships
@@ -61,4 +60,5 @@ NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
 PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d of gold
 LANDONREFUGE = You landed on a refuge field, you get paid %d gold
+LANDONTAX = You landed on a tax field, you pay either %d or you can pay 10% of your total assets, which is %d
 BOUGHTFIELD = You have successfully bought %s for %d gold!
