--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -12,8 +12,8 @@ NUMBEROFPLAYERS = Enter the number of players:
 NUMBEROFPLAYERSERROR = Invalid number of players, please select a number between %d and %d
 LOSINGPLAYER = %s has lost all their money and have been lost during their travels
 WINNINGPLAYERNAME = %s has won the game! With %d gold to spare.
-TAX% = Pay 10 %% of your gold
-TAXCASH = Pay %d gold
+TAX% = 10 %% of your gold
+TAXCASH = Or %d gold
 SLOT1 = Tribe Encampment
 SLOT2 = Crater
 SLOT3 = Mountain
@@ -63,6 +63,7 @@ NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
 PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d of gold
 LABORCAMP = You landed on a labor camp owned by another player, roll again and pay the sum times 100 times the number of labor camps he owns
+LABORCAMPCONCLUSION = You rolled %d, you end up paying %d
 LANDONREFUGE = You landed on a refuge field, you get paid %d gold
-LANDONTAX = You landed on a tax field, you pay either %d or you can pay 10% of your total assets, which is %d
+LANDONTAX = You landed on a tax field, you pay either
 BOUGHTFIELD = You have successfully bought %s for %d gold!
