Added a brief description that tells you when you are on your own field

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -67,3 +67,4 @@ LABORCAMPCONCLUSION = You rolled %d, you end up paying %d
 LANDONREFUGE = You landed on a refuge field, you get paid %d gold
 LANDONTAX = You landed on a tax field, you pay either
 BOUGHTFIELD = You have successfully bought %s for %d gold!
+YOURFIELD = You landed on your own field, your turn will now end
