Updated strings to make them more descriptive

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -12,8 +12,9 @@ NUMBEROFPLAYERS = Enter the number of players:
 NUMBEROFPLAYERSERROR = Invalid number of players, please select a number between %d and %d
 LOSINGPLAYER = %s has lost all their money and have been lost during their travels
 WINNINGPLAYERNAME = %s has won the game! With %d gold to spare.
+LABORCAMPRENT = %d*dice*owner amount laborcamps
 TAX% = 10 %% of your gold
-TAXCASH = Or %d gold
+TAXCASH = %d gold
 SLOT1 = Tribe Encampment
 SLOT2 = Crater
 SLOT3 = Mountain
@@ -61,10 +62,10 @@ YES = Yes
 NO = No
 NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
-PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d of gold
-LABORCAMP = You landed on a labor camp owned by another player, roll again and pay the sum times 100 times the number of labor camps he owns
-LABORCAMPCONCLUSION = You rolled %d, you end up paying %d
-LANDONREFUGE = You landed on a refuge field, you get paid %d gold
-LANDONTAX = You landed on a tax field, you pay either
+PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d worth of gold
+LABORCAMP = You landed on a labor camp owned by another player, roll again and pay the sum of the eyes %d times the number of labor camps he owns
+LABORCAMPCONCLUSION = You rolled %d and end up paying %d
+LANDONREFUGE = You landed on a refuge field and get paid %d gold
+LANDONTAX = You landed on a tax field and have to pay either
 BOUGHTFIELD = You have successfully bought %s for %d gold!
-YOURFIELD = You landed on your own field, your turn will now end
+YOURFIELD = You landed on your own field and your turn will now end
