Reworded a string which were too long

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -63,7 +63,7 @@ NO = No
 NOTENOUGHGOLD = You don't have enough gold to buy this field
 ENDTURN = You are ending your turn
 PAYTHEOWNER = You landed on a field owned by another player, you end up paying him %d worth of gold
-LABORCAMP = You landed on a labor camp owned by another player, roll again and pay the sum of the eyes %d times the number of labor camps he owns
+LABORCAMP = You landed on a labor camp owned by another player, roll again and pay the owner accordingly
 LABORCAMPCONCLUSION = You rolled %d and end up paying %d
 LANDONREFUGE = You landed on a refuge field and get paid %d gold
 LANDONTAX = You landed on a tax field and have to pay either
