Eddited long text, into short

--- a/src/MessageBundle_en_GB.properties
+++ b/src/MessageBundle_en_GB.properties
@@ -12,7 +12,7 @@ NUMBEROFPLAYERS = Enter the number of players:
 NUMBEROFPLAYERSERROR = Invalid number of players, please select a number between %d and %d
 LOSINGPLAYER = %s has lost all their money and have been lost during their travels
 WINNINGPLAYERNAME = %s has won the game! With %d gold to spare.
-LABORCAMPRENT = %d*dice*owner amount laborcamps
+LABORCAMPRENT = %d*dice*campsOwned
 TAX% = 10 %% of your gold
 TAXCASH = %d gold
 SLOT1 = Tribe Encampment
